--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@
 
   --background:#f1f1f1;
   --color:rgb(49, 49, 49);
-  
+  --done:rgb(105, 212, 105);
+  --pending:rgb(255, 140, 140);
   color-scheme: light dark;
   color: var(--color);
   background-color: var(--background)
