--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 
 #root {
   max-width: 1280px;
- 
+  margin: 0 auto;
 }
 
 .form-container {
@@ -87,7 +87,7 @@
     justify-items: center;
     font-size: small;
     font-weight: bold;
-    
+    height: 5rem;
 
     .color-status {
       display: flex;
@@ -151,3 +151,42 @@
   color: var(--done);
 }
 
+
+.container-tasks{
+  border-top: 3px solid  #1976D2;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); 
+  column-gap:1rem,
+}
+
+.filter-container{
+  background: var(--backgroundPanels);
+  padding: 10px;
+  margin: 0 auto;
+  width:80%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0.5px 0.5px 0.5px 0.5px #bbbbbb;
+  margin-bottom: 2rem;
+  .textField-Task{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 50%;
+    border-right: 2px solid #1976D2;
+  }
+
+  .filter-field{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+  }
+}
