--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
-
 #root {
-  max-width: 1280px;
+
   margin: 0 auto;
 }
 
@@ -29,22 +28,25 @@
 
 }
 
-.pending{
-  background:var(--pending);
+.pending {
+  background: var(--pending);
+
   @media (min-width:480px) {
-    background:inherit;
+    background: inherit;
   }
 }
 
-.done{
-  background:var(--done);
+.done {
+  background: var(--done);
+
   @media (min-width:480px) {
-    background:inherit;
+    background: inherit;
   }
 }
+
 //ONLY MOBILE
 .color-status {
- 
+
   width: 10px;
   height: 100%;
 
@@ -52,31 +54,35 @@
 
 .task-container {
   width: 95%;
-  margin: 0 auto ;
+  margin: 0 auto;
   max-width: 700px;
   font-size: small;
   margin-bottom: 10px;
   border-radius: 50;
   cursor: pointer;
 
-  .border-pending{
-    border-bottom:solid 5px  var(--pending);
+  .border-pending {
+    border-bottom: solid 5px var(--pending);
+
     @media (max-width:480px) {
-      border-bottom:none;
-    }
-  }
-  .border-done{
-    border-bottom: solid 5px var(--done);
-    @media (max-width:480px) {
-      border-bottom:none;
+      border-bottom: none;
     }
   }
 
-  .icon-pending{
-    color:rgb(253, 199, 83);
+  .border-done {
+    border-bottom: solid 5px var(--done);
+
+    @media (max-width:480px) {
+      border-bottom: none;
+    }
   }
-  .icon-done{
-    color:var(--done)
+
+  .icon-pending {
+    color: rgb(253, 199, 83);
+  }
+
+  .icon-done {
+    color: var(--done)
   }
 
   .header-container {
@@ -96,25 +102,23 @@
       align-items: center;
       width: 10px;
       height: 100%;
+
       @media (min-width:48/0px) {
-      background-color: inherit;
-      width: 100%;
+        background-color: inherit;
+        width: 100%;
       }
     }
 
     @media (min-width:480px) {
-      height:2rem;
-      margin:0px;
+      height: 2rem;
+      margin: 0px;
       grid-template-columns: 1fr 6fr 1fr;
       align-items: center;
       justify-items: center;
     }
-  
-    .menu-desktop {
-      @media (min-width:480px) {
-       
 
-      }
+    .menu-desktop {
+      @media (min-width:480px) {}
     }
 
   }
@@ -143,50 +147,130 @@
 }
 
 
-.color-pending{
+.color-pending {
   color: var(--pending);
 }
 
-.color-done{
+.color-done {
   color: var(--done);
 }
 
 
-.container-tasks{
-  border-top: 3px solid  #1976D2;
+.container-tasks {
+
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); 
-  column-gap:1rem,
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  column-gap: 1rem;
+
+
 }
 
-.filter-container{
-  background: var(--backgroundPanels);
+.filter-container {
+
   padding: 10px;
   margin: 0 auto;
-  width:80%;
-  display:flex;
-  flex-direction: row;
+  max-width: 40rem;
+  display: grid;
+  grid-template-columns: 3fr 3fr 1fr;
   justify-content: space-evenly;
   align-items: center;
   border-radius: 10px;
-  box-shadow: 0.5px 0.5px 0.5px 0.5px #bbbbbb;
+  justify-items: center;
   margin-bottom: 2rem;
-  .textField-Task{
+
+  .textField-Task {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 50%;
-    border-right: 2px solid #1976D2;
+
   }
 
-  .filter-field{
+  .filter-field {
     width: 50%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
+
   }
+}
+
+
+.header-home-container {
+  background: #1FA2FF;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  
+  
+
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  height: 20rem;
+}
+
+.container-header-home {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .header-pending {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #ffe259;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffa751, #ffd919);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffb56a, #f4ff59ec);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    box-shadow: 1px 1px 1px 1px #9292922f;
+    margin-right: 10px;
+    border-radius: 20px;
+    width: 300px;
+    height: 200px;
+    outline: 1.5px solid rgba(255, 255, 255, 0.7);
+    color: white;
+    h3{
+      font-size:x-large;
+    }
+    h2{
+      margin: 30px;
+      font-size: 100px;
+    }
+  
+  }
+
+  .header-done {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #B3FFAB;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #12fff781, #b3ffab56);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #12fff7fa, #b3ffabd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    outline: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 1px 1px 1px 1px #9292922f;
+    border-radius: 20px;
+    width: 300px;
+    height: 200px;
+    h3{
+      font-size:x-large;
+    }
+    h2{
+      margin: 30px;
+      font-size: 100px;
+    }
+  }
+
 }
