--- a/src/App.scss
+++ b/src/App.scss
@@ -64,17 +64,13 @@
   .border-pending {
     border-bottom: solid 5px var(--pending);
 
-    @media (max-width:480px) {
-      border-bottom: none;
-    }
+
   }
 
   .border-done {
     border-bottom: solid 5px var(--done);
 
-    @media (max-width:480px) {
-      border-bottom: none;
-    }
+
   }
 
   .icon-pending {
@@ -88,22 +84,23 @@
   .header-container {
     text-transform: capitalize;
     display: grid;
-    grid-template-columns: 0.1fr 6fr 1fr;
+    grid-template-columns: 1fr 6fr 1fr;
     align-items: center;
     justify-items: center;
     font-size: small;
     font-weight: bold;
-    height: 5rem;
+    height: 2.5rem;
 
     .color-status {
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      width: 10px;
+      width: 100%;
       height: 100%;
 
-      @media (min-width:48/0px) {
+
+      @media (min-width:480px) {
         background-color: inherit;
         width: 100%;
       }
@@ -126,7 +123,11 @@
   .description-task {
     padding: 10px;
     padding: 10px;
-    display: none;
+
+    text-align: justify;
+    text-overflow: ellipsis;
+    overflow-wrap: break-all;
+    //word-break: break-all;
 
     //TABLET AND DESKTOP FORMAT
     @media (min-width:480px) {
@@ -174,46 +175,58 @@
   margin: 0 auto;
   max-width: 40rem;
   display: grid;
-  grid-template-columns: 3fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr;
   justify-content: space-evenly;
   align-items: center;
   border-radius: 10px;
   justify-items: center;
-  margin-bottom: 2rem;
 
-  .textField-Task {
+
+  .container-fields {
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 50%;
+    align-items: center;
 
-  }
+    .textField-Task {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 50%;
 
-  .filter-field {
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    }
 
+    .filter-field {
+      width: 50%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+
+    }
   }
 }
 
 
 .header-home-container {
-  background: #1FA2FF;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  
-  
+  background: #1FA2FF;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  
+
+
+
+
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   position: relative;
-  height: 20rem;
+  height: 23rem;
 }
 
 .container-header-home {
@@ -227,6 +240,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background: #ffe259;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffa751, #ffd919);
@@ -240,36 +254,73 @@
     height: 200px;
     outline: 1.5px solid rgba(255, 255, 255, 0.7);
     color: white;
-    h3{
-      font-size:x-large;
+
+    h3 {
+      font-size: x-large;
     }
-    h2{
+
+    h2 {
       margin: 30px;
       font-size: 100px;
     }
-  
+
+    @media (max-width:480px) {
+      height: 10rem;
+
+      h2 {
+        font-size: 70px;
+      }
+
+      h3 {
+        margin: 0;
+        text-align: center;
+        font-size: large;
+      }
+
+    }
+
   }
 
   .header-done {
-    
+
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background: #B3FFAB;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #12fff781, #b3ffab56);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #12fff7fa, #b3ffabd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #B3FFAB;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #12fff781, #b3ffab56);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #12fff7fa, #b3ffabd5);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: white;
     outline: 1px solid rgba(255, 255, 255, 0.7);
     box-shadow: 1px 1px 1px 1px #9292922f;
     border-radius: 20px;
     width: 300px;
     height: 200px;
-    h3{
-      font-size:x-large;
+
+    h3 {
+      font-size: x-large;
     }
-    h2{
+
+    h2 {
       margin: 30px;
       font-size: 100px;
+    }
+
+    @media (max-width:480px) {
+      height: 10rem;
+
+      h2 {
+        font-size: 70px;
+      }
+
+      h3 {
+        margin: 0;
+        text-align: center;
+        font-size: large;
+      }
     }
   }
 
