--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 #root {
-
+  
   margin: 0 auto;
 }
 
@@ -324,4 +324,80 @@
     }
   }
 
+}
+.color-Info-done{
+  background: #B3FFAB;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #12fff781, #b3ffab56);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #12fff7fa, hsl(114, 100%, 84%));
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.color-Info-pending{
+  background: #ffe259;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ffa751, #ffd919);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ffb56a, #f4ff59ec);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.details-modal-container{
+    
+    width: 20rem;
+    height:20rem;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: white;
+    display: grid;
+    grid-template-rows:1fr 5fr 0.5fr ;
+  
+    .header-modal-name{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        box-sizing: border-box;
+        h1{
+          text-align: center;
+          font-size: x-large;
+        }
+        
+    }
+    .header-modal-description{
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      padding: 20px;
+      text-align: justify;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+    .footer-modal-status{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+   
+      h3{margin:0;
+      margin: 10px 0;  
+      }
+    }
+      @media (min-width:480px) {
+        .header-modal-name{
+          
+         }
+        width: 30rem;
+        height:35rem;
+      }
+}
+
+.status-modal-pending{
+  border-top:5px solid  #ffe259;
+  color:  #ffca59;
+}
+.status-modal-done{
+  border-top:5px solid  #67FFD2;
+  color: #61ddae;
 }
